# cpp-chw2

./: CMakeLists.txt  README.md  generate.py  main.cpp  make_graphs.py  makegraph.py
checker/: CMakeLists.txt  counter.cpp  funcs_for_checker.h  functions.h  substitutions_adder.cpp  text_getter.cpp  text_processing.h  timer.cpp
data/: generate.py
data/output/: comp_count.csv  comp_count_normal.csv  comp_count_with_subst.csv  time.csv  time_normal.csv  time_with_subst.csv
data/texts/: bin_text_10000.txt  bin_text_100000.txt  quad_text_10000.txt  quad_text_100000.txt
for_comp_count_measure/: CMakeLists.txt  algorithms.h  kmp_advanced.cpp  kmp_simple.cpp  naive.cpp
for_comp_count_measure/normal/: CMakeLists.txt  algorithms.h  kmp.cpp  kmp_advanced.cpp  kmp_simple.cpp  kmp_standart.cpp  naive.cpp
for_comp_count_measure/string_processing/: CMakeLists.txt  find_prefix.cpp  functions.h
for_comp_count_measure/with_substitution/: CMakeLists.txt  algorithms.h  kmp.cpp  kmp_advanced.cpp  kmp_simple.cpp  kmp_standart.cpp  naive.cpp
for_time_measure/: CMakeLists.txt  algorithms.h  kmp_advanced.cpp  kmp_simple.cpp  naive.cpp
for_time_measure/normal/: CMakeLists.txt  algorithms.h  kmp.cpp  kmp_advanced.cpp  kmp_simple.cpp  kmp_standart.cpp  naive.cpp
for_time_measure/string_processing/: CMakeLists.txt  find_prefix.cpp  functions.h
for_time_measure/with_substitution/: CMakeLists.txt  algorithms.h  kmp.cpp  kmp_advanced.cpp  kmp_simple.cpp  kmp_standart.cpp  (+1 more)
task_execution/: CMakeLists.txt  comp_cnt_to_file.cpp  file_create.cpp  functions.h  time_to_file.cpp
(+15 files in other folders)
